--- a/style.css
+++ b/style.css
@@ -68,23 +68,24 @@ article .regist{
 
 
 main{
-    background-color: rgba(169, 177, 245, 0.267);
-    box-shadow: -4px -2px 8px 2px;
-    text-align:center;
+
 }
 main .grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2;
+    grid-template-rows: repeat(2,1fr);
     width: 100%;
     height: 100vh;
-    gap: 5px;
+    gap: 20px;
+    background-color: rgba(169, 177, 245, 0.267);
+    box-shadow: -4px -2px 8px 2px;
+    text-align:center;
 }
 
-
-
-.grid .informacion{
-    border-right: double black 6px;
+.grid .informacion {
+    background-color: rgb(121 226 204 / 0.50);
+    box-shadow: -4px -2px 8px 2px;
+    text-align: center;
 }
 .informacion-four img{
     
@@ -104,13 +105,4 @@ main .grid{
 .comentarios .mb-3{
     width: 70%;
     margin: auto;
-}
-footer{
-    background-color: rgba(85, 228, 133, 0.329);
-    margin-top: 10px;
-    font-size: large;
-    text-align: center;
-    box-shadow: -4px -2px 8px 2px;
-    height: 40px;
-    padding-top: 10px ;
 }
