--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@ header{
 .cabezera{
     margin-top: 20px;
 }
+.cabezera h1{
+    transition: 2s ease all;
+}
 .cabezera h1:hover{
     color: crimson;
+    transform: scale(120%);
     
 }
 
@@ -56,6 +60,17 @@ article{
     text-align: center;
     
 }
+
+
+#ocultar{
+   display: none;
+}
+.registro h2{
+    margin-top: 20px;
+    border-bottom: 4px solid;
+    display: inline;
+    cursor: pointer;
+}
 article .regist{
     margin-right: 20%;
     text-align: end;
@@ -66,19 +81,19 @@ article .regist{
     height: auto;
 }
 
-
 main{
-
+    margin-right: 40px;
 }
+
 main .grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(2,1fr);
+    margin-right: 40px;
     width: 100%;
     height: 100vh;
-    gap: 20px;
-    background-color: rgba(169, 177, 245, 0.267);
-    box-shadow: -4px -2px 8px 2px;
+    gap: 40px;
+    border-radius: 40px;
     text-align:center;
 }
 
@@ -86,23 +101,65 @@ main .grid{
     background-color: rgb(121 226 204 / 0.50);
     box-shadow: -4px -2px 8px 2px;
     text-align: center;
+    border-radius: 40px;
+    transition: ease 1s all;
+}
+.grid .informacion:hover{
+    transform: scale(108%);
+    
+    border-radius:0;
 }
 .informacion-four img{
-    
+   
     margin-top: 20%;    
 }
 .informacion-four{
-    border-left: double 6px black;
+    background-color: rgb(121 226 204 / 0.50);
+    box-shadow: -4px -2px 8px 2px;
+    border-radius: 40px;
+    transition: ease 1s all;
 }
+.grid .informacion-four:hover{
+    transform: scale(108%);
+    
+    border-radius:0;
+}
+
 .informacion-second{
-    border-bottom: double 6px;
-    
+    background-color: rgb(121 226 204 / 0.50);
+    box-shadow: -4px -2px 8px 2px;
+    text-align: center;
+    transition: ease 1s all;
 }
-.informacion-three{
-    border-top: double 6px ;
+.grid .informacion-second:hover{
+    transform: scale(108%);
     
+    border-radius:40px;
+}
+    
+
+.informacion-three{
+    
+    background-color: rgb(121 226 204 / 0.50);
+    box-shadow: -4px -2px 8px 2px;
+    text-align: center;
+    transition: ease 1s all;
+
+}
+.grid .informacion-three:hover{
+    transform: scale(108%);
+    
+    border-radius:40px;
 }
 .comentarios .mb-3{
     width: 70%;
     margin: auto;
 }
+footer{
+    background-color: rgba(128, 255, 0, 0.466);
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+}
+
+    
